<resources>
    <string name="app_name">Asea</string>
    <string name="title_activity_main">Asea</string>
    <string name="title_slogan">LIMPIO, FÁCIL Y SEGURO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_register">Registro</string>

    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_register">REGISTRAR</string>
    <string name="btn_link_to_register">No eres miembro? Registrese.</string>
    <string name="btn_link_to_login">Ya está registrado! Ingresar.</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_logout">SALIR</string>
    <string name="name">Nombre Completo</string>
    <string name="title_activity_dashboard_client">Bienvenido</string>

    <string name="facebook_app_id">895783880509735</string>
    <string name="login_cancelado_facebook">Se canceló el login con Facebook</string>
    <string name="fallo_login_facebook">Falló el proceso de login con Facebook, intentelo de nuevo!</string>
    <string name="title_activity_new_service">Servicio Nuevo</string>
    <string name="title_activity_scheduled_services">Servicios Programados</string>
    <string name="title_activity_payments">Método de Pago</string>
    <string name="title_activity_rate_service">Calificar Servicio</string>
    <string name="title_activity_schedule">Programación</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="scheduled_services">Servicios \nProgramados</string>
    <string name="new_service">Programar Nuevo Servicio</string>
    <string name="title_activity_my_account">Mi cuenta</string>
    <string name="direccion_servicio">Dirección del Servicio</string>
    <string name="program_service">Programar Servicio</string>
    <string name="title_plan">Plan a Adquirir</string>

    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phoneUser">Celular</string>
    <string name="phoneWorkUser">Teléfono de Trabajo</string>
    <string name="phoneLocalUser">Teléfono Hogar</string>
    <string name="txtSaveProfile">Guardar</string>


</resources>
