<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true"
style="@android:style/Theme.Holo.Light">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <!--  Header Starts-->

    <LinearLayout android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingTop="30dip"
        android:paddingBottom="5dip"
        android:background="@drawable/cabezote1"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <!-- Logo Start-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headerText"
            android:textStyle="bold"
            android:paddingStart="80dp"
            android:text="@string/title_activity_new_service" />
        <!-- Logo Ends -->
    </LinearLayout>
    <!--  Header Ends -->

    <!-- Content Start -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_below="@id/header"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblDireccion"
            android:text="@string/direccion_servicio" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDireccion"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:id="@+id/lvPlanes"
            android:layout_weight="2.33" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_service"
            android:id="@+id/btnSchedule"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
    <!-- Content Ends-->
</RelativeLayout>


</ScrollView>
