<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Holo.Light"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.s2c.android.asea.aseaapp1.DashboardClient">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--  Header Starts-->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@drawable/cabezote1"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="30dip">

            <!-- Logo Start-->
            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:text="@string/title_activity_dashboard_client"
                android:textSize="@dimen/size_text_tile"
                android:textStyle="bold" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->

        <!-- Content Start -->

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:orientation="vertical"
                android:layout_gravity="center"
                >

                <Button
                    android:id="@+id/btnMyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/my_account"
                    android:drawableLeft="@mipmap/icon_logo_grey"
                    android:background="@null"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/my_account"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_row="0"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSchedServ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/schedule_icon"
                    android:background="@null"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/scheduled_services"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="1"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnNewServ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="1"
                    android:drawableLeft="@mipmap/btn_new_service"
                    android:background="@null"
                    android:text="@string/new_service"/>


            </LinearLayout>
        </GridLayout>


        <!-- Content Ends-->
    </RelativeLayout>


</ScrollView>